add assignment 1 and 2

--- a/assignments/assignment_tasks_01.ipynb
+++ b/assignments/assignment_tasks_01.ipynb
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096]\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
     "\n",
     "\n",
     "# Test\n",
-    "input_01_01 = 0\n",
+    "input_01_01 = 13\n",
     "# TODO: Set the correct input value\n",
     "\n",
     "response_01_01 = numbers(input_01_01)\n",
@@ -86,7 +86,22 @@
     "\n",
     "* <font color='red'>What is the output of the algorithm when it is called with an input value of `13`?</font>\n",
     "* <font color='red'>Explain how the algorithm works.</font>\n",
-    "* <font color='red'>TODO: WRITE YOUR ANSWER HERE USING RED FONT</font>"
+    "* <font color='red'>TODO: WRITE YOUR ANSWER HERE USING RED FONT</font>:  \n",
+    "<font color='red'>\n",
+    "    * The output of the algorithm is list [1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096].  \n",
+    "\n",
+    "    * The algorithm starts with alist with inital value 1 and an empty list for storing results. Starting value is set as k = 0.  \n",
+    "\n",
+    "    * In the while loop k is increased by one in each iteration and the loop runs while k is less than or equal to b.  \n",
+    "\n",
+    "    * With each iteration, a new number is appended to the sequence list and it is twice the last number that is in the list.  \n",
+    "\n",
+    "    * So in our case, it creates a sequence with values up to 2^13.  \n",
+    "\n",
+    "    * Then in the for loop, we iterate in the given range and append values from sequence list to response list.  \n",
+    "\n",
+    "    * By providing an input, the algorithm should return the response list.</font>\n",
+    "\n"
    ]
   },
   {
@@ -108,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d2e06e31",
    "metadata": {
     "execution": {
@@ -124,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "unexpectedly None\n"
+      "The results are: -5.000000, 0.333333, 0.714286, 1.400000\n"
      ]
     }
    ],
@@ -146,7 +161,7 @@
     "\n",
     "\n",
     "# Test\n",
-    "response_01_02_a, response_01_02_b, response_01_02_c, response_01_02_d = None, None, None, None\n",
+    "response_01_02_a, response_01_02_b, response_01_02_c, response_01_02_d = calculate_numbers(0), calculate_numbers(3), calculate_numbers(5), calculate_numbers(-1)\n",
     "# TODO: What is the output when the algorithm (`calculate_numbers`) is called with the following numbers: 0, 3, 5 and -1?\n",
     "# TODO: Use only six decimal in results.\n",
     "\n",
@@ -155,9 +170,21 @@
     "    unittest.TestCase().assertIsNotNone(response_01_02_b)\n",
     "    unittest.TestCase().assertIsNotNone(response_01_02_c)\n",
     "    unittest.TestCase().assertIsNotNone(response_01_02_d)\n",
-    "    print(f\"The results are: {response_01_02_a}, {response_01_02_b}, {response_01_02_c}, {response_01_02_d}\")\n",
+    "    print(f\"The results are: {response_01_02_a:.6f}, {response_01_02_b:.6f}, {response_01_02_c:.6f}, {response_01_02_d:.6f}\")\n",
     "except AssertionError as err_msg:\n",
     "    print(err_msg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2ad9e0b",
+   "metadata": {},
+   "source": [
+    "<font color='red'>Final outputs should be:  \n",
+    "response_01_02_a = -5.000000  \n",
+    "response_01_02_b = 0.333333  \n",
+    "response_01_02_c = 0.714286  \n",
+    "response_01_02_d = 1.400000</font>"
    ]
   },
   {
@@ -183,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f64e94dd",
    "metadata": {
     "execution": {
@@ -198,25 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lists differ: [] != [1, 0.5, 0.66667, 0.6, 0.625, 0.61538, 0.6[45 chars]1803]\n",
-      "\n",
-      "Second list contains 12 additional elements.\n",
-      "First extra element 0:\n",
-      "1\n",
-      "\n",
-      "- []\n",
-      "+ [1,\n",
-      "+  0.5,\n",
-      "+  0.66667,\n",
-      "+  0.6,\n",
-      "+  0.625,\n",
-      "+  0.61538,\n",
-      "+  0.61905,\n",
-      "+  0.61765,\n",
-      "+  0.61818,\n",
-      "+  0.61798,\n",
-      "+  0.61806,\n",
-      "+  0.61803]\n"
+      "Response [1, 0.5, 0.66667, 0.6, 0.625, 0.61538, 0.61905, 0.61765, 0.61818, 0.61798, 0.61806, 0.61803] was correct.\n"
      ]
     }
    ],
@@ -238,6 +247,10 @@
     "response_01_03 = []\n",
     "\n",
     "# TODO: Call recursive_func() with values 0-11 by using only four decimal in results and saving all results in the response_01_03 list.\n",
+    "for n in range(12):\n",
+    "    result = recursive_func(n)\n",
+    "    round_result = round(result,5)\n",
+    "    response_01_03.append(round_result)\n",
     "\n",
     "try:\n",
     "    unittest.TestCase().assertListEqual(response_01_03, correct_answer_01_03 )\n",
@@ -275,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "8968eea4",
    "metadata": {
     "execution": {
@@ -291,14 +304,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lists differ: [0, 1] != [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610]\n",
-      "\n",
-      "Second list contains 14 additional elements.\n",
-      "First extra element 2:\n",
-      "1\n",
-      "\n",
-      "- [0, 1]\n",
-      "+ [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610]\n"
+      "Response [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610] was correct.\n"
      ]
     }
    ],
@@ -313,9 +319,10 @@
     "    initial_len = 2\n",
     "    # TODO: Do the implementation of the algorithm.\n",
     "    # TODO: Return values in the all_vals list.\n",
-    "\n",
+    "    for i in range(iterations_max):\n",
+    "        all_vals.append(all_vals[-1] + all_vals[-2])\n",
+    "    \n",
     "    return all_vals\n",
-    "\n",
     "\n",
     "response_01_04 = count_sums(14)\n",
     "\n",
@@ -333,6 +340,11 @@
    "main_language": "python",
    "notebook_metadata_filter": "-all"
   },
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -343,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
