--- a/assignments/assignment_tasks_02.ipynb
+++ b/assignments/assignment_tasks_02.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a1efb375",
    "metadata": {
     "execution": {
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "296 != 0\n"
+      "Numeric Sum of [73, 69, 79, None, 75, None] = 296 was correct.\n"
      ]
     }
    ],
@@ -82,6 +82,10 @@
     "# TODO: Write and describe what algorithm in `my_func()` does and what does it return.\n",
     "# TODO: Calculate the sum of not None values in the list to response_02_01 variable.\n",
     "\n",
+    "for i in res_arr_02_01:\n",
+    "    if i is not None:\n",
+    "        response_02_01 += i\n",
+    "\n",
     "try:\n",
     "    unittest.TestCase().assertEqual(correct_answer_02_01, response_02_01)\n",
     "    print(f\"Numeric Sum of {res_arr_02_01} = {response_02_01} was correct.\")\n",
@@ -100,7 +104,13 @@
     "\n",
     "* <font color='red'>Explain how the algorithm works and what does it return.</font>\n",
     "* <font color='red'>Calculate the sum of not `None` values in the list returned by `my_func()`.</font>\n",
-    "* <font color='red'>TODO: WRITE YOUR ANSWER HERE USING RED FONT</font>"
+    "* <font color='red'>TODO: WRITE YOUR ANSWER HERE USING RED FONT</font>  \n",
+    "    <font color='red'> \n",
+    "    * my_func() returns a new list called result that has the same length as arg_list.  \n",
+    "    * in the for loop, it goes over each element of the arg_list as an index to get the value from the message list.  \n",
+    "    * if the index in not valid, it assigns None to the index k in the result list. For example, arg_list[5] is 10 and message only has length from 0 to 4, so the result[5] is saved as None.\n",
+    "    * So once it iterates through the length of the arg_list, it returns result, which would in this case be: result = [73, 69, 79, None, 75, None]\n",
+    "    </font>"
    ]
   },
   {
@@ -126,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "e84d86e6",
    "metadata": {
     "execution": {
@@ -142,14 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lists differ: [] != [74, 16, 54, 77, 22, 22, 4, 19, 13, 36]\n",
-      "\n",
-      "Second list contains 10 additional elements.\n",
-      "First extra element 0:\n",
-      "74\n",
-      "\n",
-      "- []\n",
-      "+ [74, 16, 54, 77, 22, 22, 4, 19, 13, 36]\n"
+      "All responses [74, 16, 54, 77, 22, 22, 4, 19, 13, 36], [744, 39, 200, 976, 121, 40, 3, 90, 30, 224] and [-50, -10, -46, 45, 0, -18, -2, -1, 7, -20] were correct.\n"
      ]
     }
    ],
@@ -164,21 +167,26 @@
     "def sum_arrays(a, b):\n",
     "    sum_arr = []\n",
     "    # TODO: Implementation with for loop\n",
-    "\n",
+    "    for k in range(len(a)):\n",
+    "        sum_arr.append(a[k] + b[k])\n",
     "    return sum_arr\n",
     "\n",
     "\n",
     "def multiply_arrays(a, b):\n",
     "    mult_arr = len(a) * [0]\n",
     "    # TODO: Implementation with while loop\n",
-    "\n",
+    "    j = 0\n",
+    "    while j < len(a):\n",
+    "        mult_arr[j] = a[j] * b[j]\n",
+    "        j += 1\n",
     "    return mult_arr\n",
     "\n",
     "\n",
     "def subtract_arrays(a, b):\n",
     "    sub_arr = len(a) * [0]\n",
     "    # TODO: Implementation with for loop using enumerate class\n",
-    "\n",
+    "    for index, (a_value, b_value) in enumerate(zip(a, b)):\n",
+    "        sub_arr[index] = a_value - b_value\n",
     "    return sub_arr\n",
     "\n",
     "\n",
@@ -218,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "ac56d284",
    "metadata": {
     "execution": {
@@ -234,15 +242,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[], []]\n",
-      "Lists differ: [[], []] != [[18, 12, 10, 6, 4, 2], [21, 11, 9, 3, 1]]\n",
-      "\n",
-      "First differing element 0:\n",
-      "[]\n",
-      "[18, 12, 10, 6, 4, 2]\n",
-      "\n",
-      "- [[], []]\n",
-      "+ [[18, 12, 10, 6, 4, 2], [21, 11, 9, 3, 1]]\n"
+      "[[18, 12, 10, 6, 4, 2], [21, 11, 9, 3, 1]]\n",
+      "Response [[18, 12, 10, 6, 4, 2], [21, 11, 9, 3, 1]] was correct.\n"
      ]
     }
    ],
@@ -259,9 +260,18 @@
     "    odd = []\n",
     "\n",
     "    # TODO: Split all numbers in to even and odd arrays.\n",
-    "    # TODO: Sort the numbers from largest to smallest in both lists before adding lists.\n",
-    "    # TODO: Finally return the list with the format: return [even, odd].\n",
+    "    for value in a:\n",
+    "        if value is not None:\n",
+    "            if value % 2  == 0:\n",
+    "                even.append(value)\n",
+    "            else:\n",
+    "                odd.append(value)\n",
     "\n",
+    "    # TODO: Sort the numbers from largest to smallest in both lists before adding lists.\n",
+    "    even.sort(reverse=True)\n",
+    "    odd.sort(reverse=True)\n",
+    "\n",
+    "    # TODO: Finally return the list with the format: return [even, odd].\n",
     "    return [even, odd]\n",
     "\n",
     "\n",
@@ -294,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "faa1c422",
    "metadata": {
     "execution": {
@@ -309,7 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 != 16.2\n"
+      "Average 16.2 for 15 numeric items in list was correct.\n"
      ]
     }
    ],
@@ -325,6 +335,16 @@
     "    my_avg = 0\n",
     "    counter = 0\n",
     "    # TODO: Calculate the average value for the numeric values in the list.\n",
+    "    for item in numb_list:\n",
+    "        if isinstance(item, (int, float)): \n",
+    "            my_avg += item\n",
+    "            counter += 1\n",
+    "    \n",
+    "    if counter > 0:\n",
+    "        my_avg = my_avg / counter\n",
+    "    else:\n",
+    "        my_avg = 0\n",
+    "\n",
     "    # TODO: Return both average and number of numeric items in the list.\n",
     "\n",
     "    return my_avg, counter\n",
@@ -346,6 +366,11 @@
    "main_language": "python",
    "notebook_metadata_filter": "-all"
   },
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -356,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
