--- a/assignments/assignment_tasks_03.ipynb
+++ b/assignments/assignment_tasks_03.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5641f9f9",
    "metadata": {
     "execution": {
@@ -54,14 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lists differ: [] != ['index 0: a != e', 'index 3: d != g', 'index 4: e != a', 'index 7: h != f']\n",
-      "\n",
-      "Second list contains 4 additional elements.\n",
-      "First extra element 0:\n",
-      "'index 0: a != e'\n",
-      "\n",
-      "- []\n",
-      "+ ['index 0: a != e', 'index 3: d != g', 'index 4: e != a', 'index 7: h != f']\n"
+      "List ['index 0: a != e', 'index 3: d != g', 'index 4: e != a', 'index 7: h != f'] was correct.\n"
      ]
     }
    ],
@@ -77,6 +70,9 @@
     "    differencies = []  # will include all indexes where elements are different.\n",
     "    # TODO: Implement comparison between the content of two arrays in each index.\n",
     "    # TODO: Return all indexes where elements are different in comparable arrays using given string format.\n",
+    "    for i in range(len(a)):\n",
+    "        if a[i] != b[i]:\n",
+    "            differencies.append(f\"index {i}: {a[i]} != {b[i]}\")\n",
     "\n",
     "    return differencies\n",
     "\n",
@@ -112,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bc0fa2b0",
    "metadata": {
     "execution": {
@@ -128,14 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lists differ: [] != ['banana', 'avocado', 'omena']\n",
-      "\n",
-      "Second list contains 3 additional elements.\n",
-      "First extra element 0:\n",
-      "'banana'\n",
-      "\n",
-      "- []\n",
-      "+ ['banana', 'avocado', 'omena']\n"
+      "Response list ['banana', 'avocado', 'omena'] was correct.\n"
      ]
     }
    ],
@@ -151,7 +140,46 @@
     "def multiple_search_filters(fruits):\n",
     "    results = []\n",
     "    # TODO: Filter list based on the given four conditions.\n",
-    "\n",
+    "    vowels = set('aeiou')\n",
+    "    consonants = set('bcdfghjklmnpqrstvwxyz')\n",
+    "    \n",
+    "    for word in fruits:\n",
+    "        # The minimum length is five characters or more and the maximum length is less than ten characters.\n",
+    "        if not (5 <= len(word) < 10): \n",
+    "            continue\n",
+    "        \n",
+    "        has_vowel = False\n",
+    "        has_consonant = False\n",
+    "        vowel_count = 0\n",
+    "        consonant_count = 0\n",
+    "        \n",
+    "        for char in word:\n",
+    "            if char in vowels:\n",
+    "                has_vowel = True\n",
+    "                vowel_count += 1\n",
+    "            elif char in consonants:\n",
+    "                has_consonant = True\n",
+    "                consonant_count += 1\n",
+    "        \n",
+    "        # The string contains both vowels and consonants.\n",
+    "        if not (has_vowel and has_consonant):\n",
+    "            continue\n",
+    "        \n",
+    "        # The number of vowels is equal to or greater than the number of consonants.\n",
+    "        if vowel_count < consonant_count:\n",
+    "            continue\n",
+    "        \n",
+    "        # Could not include two consecutive vowel in the word.\n",
+    "        consecutive_vowels = False\n",
+    "        for i in range(len(word) - 1):\n",
+    "            if word[i] in vowels and word[i + 1] in vowels:\n",
+    "                consecutive_vowels = True\n",
+    "                break\n",
+    "        \n",
+    "        if consecutive_vowels:\n",
+    "            continue\n",
+    "        \n",
+    "        results.append(word)\n",
     "    return results\n",
     "\n",
     "\n",
@@ -184,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3ff8ddc1",
    "metadata": {
     "execution": {
@@ -200,14 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lists differ: ['i', 'j', 'b', 'h', 'l', 'a', 'k', 'c', 'g', 'f', 'e', 'd'] != ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l']\n",
-      "\n",
-      "First differing element 0:\n",
-      "'i'\n",
-      "'a'\n",
-      "\n",
-      "- ['i', 'j', 'b', 'h', 'l', 'a', 'k', 'c', 'g', 'f', 'e', 'd']\n",
-      "+ ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l']\n"
+      "The answer's sorted List ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l'] was correct.\n"
      ]
     }
    ],
@@ -239,6 +260,15 @@
     "    n = len(new_arr)\n",
     "    # TODO: sort list a and return sorted list with your own implementation of bubble sort.\n",
     "\n",
+    "    while True:\n",
+    "        swapped = False\n",
+    "        for i in range(1, n):\n",
+    "            if new_arr[i - 1] > new_arr[i]:\n",
+    "                new_arr[i - 1], new_arr[i] = new_arr[i], new_arr[i - 1]\n",
+    "                swapped = True\n",
+    "        if not swapped:\n",
+    "            break\n",
+    "\n",
     "    return new_arr\n",
     "\n",
     "\n",
@@ -268,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "78a0556e",
    "metadata": {
     "execution": {
@@ -283,7 +313,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[] == [] : List should not be empty\n"
+      "The answer's ordered list ['1', '4.5', 'apple', 'green', 'omean', 'orange'] was correct.\n"
      ]
     }
    ],
@@ -291,20 +321,35 @@
     "\n",
     "import unittest\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "def ask_array_from_user():\n",
     "    new_arr = []\n",
     "    # TODO: Prompt the user for the array size which should be between 5 and 10.\n",
     "    # TODO: Accept user input for values (as `str`) until the array is filled, and populate the array with non-empty elements.\n",
+    "\n",
+    "    while True:\n",
+    "        try:\n",
+    "            size = int(input(\"Enter the array size between 5 and 10: \"))\n",
+    "            if 5 <= size <= 10:\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"Please enter a number between 5 and 10.\")\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input. Please enter a number between 5 and 10.\")\n",
+    "    \n",
+    "    # Accept user input for values (as `str`) until the array is filled\n",
+    "    while len(new_arr) < size:\n",
+    "        value = input(f\"Enter value {len(new_arr) + 1}/{size}: \").strip()\n",
+    "        if value:\n",
+    "            new_arr.append(value)\n",
+    "        else:\n",
+    "            print(\"Please enter a valid value.\")\n",
     "\n",
     "    return new_arr\n",
     "\n",
     "\n",
     "# test\n",
     "list_from_user = ask_array_from_user()\n",
-    "response_03_04 = list_from_user\n",
+    "response_03_04 = bubble_sort(list_from_user)\n",
     "# TODO: Sort the array in ascending order using the bubble_sort() function developed in assignment 3.3.\n",
     "\n",
     "correct_answer_03_04 = sorted(list_from_user)\n",
@@ -324,6 +369,11 @@
    "main_language": "python",
    "notebook_metadata_filter": "-all"
   },
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -334,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
