--- a/assignments/assignment_tasks_04.ipynb
+++ b/assignments/assignment_tasks_04.ipynb
@@ -53,14 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lists differ: [[], []] != [[18, 2, 4, 18, 8, 14, 44], [15, 3, 11, 5, 7, 21, 55]]\n",
-      "\n",
-      "First differing element 0:\n",
-      "[]\n",
-      "[18, 2, 4, 18, 8, 14, 44]\n",
-      "\n",
-      "- [[], []]\n",
-      "+ [[18, 2, 4, 18, 8, 14, 44], [15, 3, 11, 5, 7, 21, 55]]\n"
+      "Response [[18, 2, 4, 18, 8, 14, 44], [15, 3, 11, 5, 7, 21, 55]] was correct.\n"
      ]
     }
    ],
@@ -77,6 +70,12 @@
     "    even_que = queue.Queue()\n",
     "    odd_que = queue.Queue()\n",
     "    # TODO: create two queues and return them in a list\n",
+    "\n",
+    "    for num in a:\n",
+    "        if num % 2 == 0:\n",
+    "            even_que.put(num)\n",
+    "        else:\n",
+    "            odd_que.put(num)\n",
     "\n",
     "    return [even_que, odd_que]\n",
     "\n",
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6f423c79",
    "metadata": {
     "execution": {
@@ -125,7 +124,9 @@
      "output_type": "stream",
      "text": [
       "Enter at least three integers. Enter a number of zero (0) to stop.\n",
-      "1 not greater than or equal to 3 : The length of the list should be 3 or greater.\n"
+      "You must enter at least three integers before stopping.\n",
+      "You must enter at least three integers before stopping.\n",
+      "Response [1, 2, 3] was correct.\n"
      ]
     }
    ],
@@ -144,6 +145,18 @@
     "    # TODO: Enter input values into the queue. Only integers are added to the queue.\n",
     "    # TODO: Enter at least three integers.\n",
     "    # TODO: Number zero terminates the program (do not store zero (0) in queue).\n",
+    "    while True:\n",
+    "        try:\n",
+    "            new_val = int(input(f\"Give {i}. element> \"))\n",
+    "            if new_val == 0:\n",
+    "                if input_queue.qsize() < 3:\n",
+    "                    print(\"You must enter at least three integers before stopping.\")\n",
+    "                    continue\n",
+    "                break\n",
+    "            input_queue.put(new_val)\n",
+    "            i += 1\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input. Please enter an integer.\")\n",
     "\n",
     "\n",
     "    # Fixing error with test.\n",
@@ -195,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "becb1246",
    "metadata": {
     "execution": {
@@ -211,22 +224,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lists differ: [] != ['a', 'b', 'c', 'd', 'e', '7']\n",
-      "\n",
-      "Second list contains 6 additional elements.\n",
-      "First extra element 0:\n",
-      "'a'\n",
-      "\n",
-      "- []\n",
-      "+ ['a', 'b', 'c', 'd', 'e', '7']\n",
-      "Lists differ: [] != ['7', 'e', 'd', 'c', 'b', 'a']\n",
-      "\n",
-      "Second list contains 6 additional elements.\n",
-      "First extra element 0:\n",
-      "'7'\n",
-      "\n",
-      "- []\n",
-      "+ ['7', 'e', 'd', 'c', 'b', 'a']\n"
+      "Inserted a into stack. Current stack size: 1\n",
+      "Inserted b into stack. Current stack size: 2\n",
+      "Inserted c into stack. Current stack size: 3\n",
+      "Inserted d into stack. Current stack size: 4\n",
+      "Inserted e into stack. Current stack size: 5\n",
+      "Inserted 7 into stack. Current stack size: 6\n",
+      "Stack deque(['a', 'b', 'c', 'd', 'e', '7']) was correct.\n",
+      "Popped 7 from stack. Current stack size: 5\n",
+      "Popped e from stack. Current stack size: 4\n",
+      "Popped d from stack. Current stack size: 3\n",
+      "Popped c from stack. Current stack size: 2\n",
+      "Popped b from stack. Current stack size: 1\n",
+      "Popped a from stack. Current stack size: 0\n",
+      "Response ['7', 'e', 'd', 'c', 'b', 'a'] was correct.\n"
      ]
     }
    ],
@@ -242,6 +253,9 @@
     "def create_stack(a):\n",
     "    # TODO: Create stack from the input list a.\n",
     "    st = deque()\n",
+    "    for item in a:\n",
+    "        st.append(item)\n",
+    "        print(f\"Inserted {item} into stack. Current stack size: {len(st)}\")\n",
     "\n",
     "    return st\n",
     "\n",
@@ -249,6 +263,10 @@
     "def pop_stack(a):\n",
     "    # TODO: Pop all elements from the stack and save these values in the list in the same order\n",
     "    new_arr = []\n",
+    "    while a:\n",
+    "        item = a.pop()\n",
+    "        new_arr.append(item)\n",
+    "        print(f\"Popped {item} from stack. Current stack size: {len(a)}\")\n",
     "\n",
     "    return new_arr\n",
     "\n",
@@ -382,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "b4653d94",
    "metadata": {
     "execution": {
@@ -397,7 +415,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 != 3\n"
+      "1. Insert new element\n",
+      "2. Remove element\n",
+      "3. Show stack content\n",
+      "4. End program\n",
+      "Added 'a' item.\n",
+      "1. Insert new element\n",
+      "2. Remove element\n",
+      "3. Show stack content\n",
+      "4. End program\n",
+      "Added 'b' item.\n",
+      "1. Insert new element\n",
+      "2. Remove element\n",
+      "3. Show stack content\n",
+      "4. End program\n",
+      "Removed 'b' item.\n",
+      "1. Insert new element\n",
+      "2. Remove element\n",
+      "3. Show stack content\n",
+      "4. End program\n",
+      "Added 'c' item.\n",
+      "1. Insert new element\n",
+      "2. Remove element\n",
+      "3. Show stack content\n",
+      "4. End program\n",
+      "Added 'd' item.\n",
+      "1. Insert new element\n",
+      "2. Remove element\n",
+      "3. Show stack content\n",
+      "4. End program\n",
+      "Removed 'd' item.\n",
+      "1. Insert new element\n",
+      "2. Remove element\n",
+      "3. Show stack content\n",
+      "4. End program\n",
+      "Added 'e' item.\n",
+      "1. Insert new element\n",
+      "2. Remove element\n",
+      "3. Show stack content\n",
+      "4. End program\n",
+      "Added 'f' item.\n",
+      "1. Insert new element\n",
+      "2. Remove element\n",
+      "3. Show stack content\n",
+      "4. End program\n",
+      "Removed 'f' item.\n",
+      "1. Insert new element\n",
+      "2. Remove element\n",
+      "3. Show stack content\n",
+      "4. End program\n",
+      "Stack Size: 3, with elements ['a', 'c', 'e']\n",
+      "1. Insert new element\n",
+      "2. Remove element\n",
+      "3. Show stack content\n",
+      "4. End program\n",
+      "Thank You!\n",
+      "Lists differ: ['a', 'c', 'e'] != ['a', 'd', 'g']\n",
+      "\n",
+      "First differing element 1:\n",
+      "'c'\n",
+      "'d'\n",
+      "\n",
+      "- ['a', 'c', 'e']\n",
+      "?        ^    ^\n",
+      "\n",
+      "+ ['a', 'd', 'g']\n",
+      "?        ^    ^\n",
+      "\n"
      ]
     }
    ],
@@ -413,8 +497,35 @@
     "def ask_stack_from_user():\n",
     "    stack = LifoQueue(maxsize=8)\n",
     "\n",
-    "    return stack\n",
+    "    letter_index = 0\n",
     "\n",
+    "    while True:\n",
+    "        print(\"\\n\".join(menu))\n",
+    "        choice = input(\"Select 1 - 4.> \").strip()\n",
+    "\n",
+    "        if choice == '1':\n",
+    "            if letter_index < len(letters):\n",
+    "                stack.put(letters[letter_index])\n",
+    "                print(f\"Added '{letters[letter_index]}' item.\")\n",
+    "                letter_index += 1\n",
+    "            else:\n",
+    "                print(\"No more letters to add.\")\n",
+    "        elif choice == '2':\n",
+    "            if not stack.empty():\n",
+    "                removed_item = stack.get()\n",
+    "                print(f\"Removed '{removed_item}' item.\")\n",
+    "            else:\n",
+    "                print(\"Stack is empty. Nothing to remove.\")\n",
+    "        elif choice == '3':\n",
+    "            stack_content = list(stack.queue)\n",
+    "            print(f\"Stack Size: {stack.qsize()}, with elements {stack_content}\")\n",
+    "        elif choice == '4':\n",
+    "            print(\"Thank You!\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid choice. Please select a number between 1 and 4.\")\n",
+    "\n",
+    "    return stack\n",
     "\n",
     "response_04_04 = ask_stack_from_user()\n",
     "correct_answer_04_04 = [letters[0], letters[3], letters[6]]\n",
@@ -436,6 +547,11 @@
    "main_language": "python",
    "notebook_metadata_filter": "-all"
   },
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -446,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
