--- a/assignments/assignment_tasks_05.ipynb
+++ b/assignments/assignment_tasks_05.ipynb
@@ -40,20 +40,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "683c3e98",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-09T17:27:47.484873Z",
+     "start_time": "2025-01-09T17:27:47.409250Z"
+    },
     "execution": {
      "iopub.execute_input": "2024-12-10T09:59:07.590587Z",
      "iopub.status.busy": "2024-12-10T09:59:07.590587Z",
      "iopub.status.idle": "2024-12-10T09:59:07.615904Z",
      "shell.execute_reply": "2024-12-10T09:59:07.614911Z"
     },
-    "lines_to_next_cell": 0,
-    "ExecuteTime": {
-     "end_time": "2025-01-09T17:27:47.484873Z",
-     "start_time": "2025-01-09T17:27:47.409250Z"
-    }
+    "lines_to_next_cell": 0
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'ProductID': 1, 'ProductName': 'Smartphone', 'Category': 'Electronics', 'Price': 299.99, 'Quantity': 50}, {'ProductID': 11, 'ProductName': 'Bed', 'Category': 'Furniture', 'Price': 500.0, 'Quantity': 8}, {'ProductID': 21, 'ProductName': 'Backpack', 'Category': 'Accessories', 'Price': 39.99, 'Quantity': 100}, {'ProductID': 31, 'ProductName': 'Book', 'Category': 'Stationery', 'Price': 14.99, 'Quantity': 100}, {'ProductID': 41, 'ProductName': 'Air Conditioner', 'Category': 'Electronics', 'Price': 499.99, 'Quantity': 8}]\n",
+      "Response [{'ProductID': 1, 'ProductName': 'Smartphone', 'Category': 'Electronics', 'Price': 299.99, 'Quantity': 50}, {'ProductID': 11, 'ProductName': 'Bed', 'Category': 'Furniture', 'Price': 500.0, 'Quantity': 8}, {'ProductID': 21, 'ProductName': 'Backpack', 'Category': 'Accessories', 'Price': 39.99, 'Quantity': 100}, {'ProductID': 31, 'ProductName': 'Book', 'Category': 'Stationery', 'Price': 14.99, 'Quantity': 100}, {'ProductID': 41, 'ProductName': 'Air Conditioner', 'Category': 'Electronics', 'Price': 499.99, 'Quantity': 8}] was correct.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import csv\n",
@@ -71,6 +82,14 @@
     "def read_products(filename):\n",
     "    products = []\n",
     "    # TODO: Read CSV File\n",
+    "    products = []\n",
+    "    with open(filename, mode='r', encoding='utf-8') as file:\n",
+    "        reader = csv.DictReader(file)\n",
+    "        for row in reader:\n",
+    "            row['ProductID'] = int(row['ProductID'])\n",
+    "            row['Price'] = float(row['Price'])\n",
+    "            row['Quantity'] = int(row['Quantity'])\n",
+    "            products.append(row)\n",
     "\n",
     "    return products\n",
     "\n",
@@ -78,6 +97,8 @@
     "def filter_every_nth_product(fname, n):\n",
     "    result_arr = []\n",
     "    # TODO: Filter every tenth row in the result based on the `ProductID` value starting from line one (1, 11, 21, ...).\n",
+    "    products = read_products(fname)\n",
+    "    result_arr = [product for index, product in enumerate(products, start=1) if index % n == 1]\n",
     "\n",
     "    return result_arr\n",
     "\n",
@@ -92,49 +113,7 @@
     "    print(f\"Response {response_05_01} was correct.\")\n",
     "except AssertionError as err_msg:\n",
     "    print(err_msg)"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "Lists differ: [] != [{'ProductID': 1, 'ProductName': 'Smartpho[476 chars]: 8}]\n",
-      "\n",
-      "Second list contains 5 additional elements.\n",
-      "First extra element 0:\n",
-      "{'ProductID': 1, 'ProductName': 'Smartphone', 'Category': 'Electronics', 'Price': 299.99, 'Quantity': 50}\n",
-      "\n",
-      "- []\n",
-      "+ [{'Category': 'Electronics',\n",
-      "+   'Price': 299.99,\n",
-      "+   'ProductID': 1,\n",
-      "+   'ProductName': 'Smartphone',\n",
-      "+   'Quantity': 50},\n",
-      "+  {'Category': 'Furniture',\n",
-      "+   'Price': 500.0,\n",
-      "+   'ProductID': 11,\n",
-      "+   'ProductName': 'Bed',\n",
-      "+   'Quantity': 8},\n",
-      "+  {'Category': 'Accessories',\n",
-      "+   'Price': 39.99,\n",
-      "+   'ProductID': 21,\n",
-      "+   'ProductName': 'Backpack',\n",
-      "+   'Quantity': 100},\n",
-      "+  {'Category': 'Stationery',\n",
-      "+   'Price': 14.99,\n",
-      "+   'ProductID': 31,\n",
-      "+   'ProductName': 'Book',\n",
-      "+   'Quantity': 100},\n",
-      "+  {'Category': 'Electronics',\n",
-      "+   'Price': 499.99,\n",
-      "+   'ProductID': 41,\n",
-      "+   'ProductName': 'Air Conditioner',\n",
-      "+   'Quantity': 8}]\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,20 +134,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "id": "fc9463b7",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-09T17:27:47.526331Z",
+     "start_time": "2025-01-09T17:27:47.513451Z"
+    },
     "execution": {
      "iopub.execute_input": "2024-12-10T09:59:07.619340Z",
      "iopub.status.busy": "2024-12-10T09:59:07.618311Z",
      "iopub.status.idle": "2024-12-10T09:59:07.628101Z",
      "shell.execute_reply": "2024-12-10T09:59:07.627105Z"
     },
-    "lines_to_next_cell": 0,
-    "ExecuteTime": {
-     "end_time": "2025-01-09T17:27:47.526331Z",
-     "start_time": "2025-01-09T17:27:47.513451Z"
-    }
+    "lines_to_next_cell": 0
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response [{'ProductID': 2, 'ProductName': 'Laptop', 'Category': 'Electronics', 'Price': 899.99, 'Quantity': 30, 'InventoryValue': 26999.7}, {'ProductID': 7, 'ProductName': 'Tablet', 'Category': 'Electronics', 'Price': 399.99, 'Quantity': 40, 'InventoryValue': 15999.6}, {'ProductID': 1, 'ProductName': 'Smartphone', 'Category': 'Electronics', 'Price': 299.99, 'Quantity': 50, 'InventoryValue': 14999.5}, {'ProductID': 6, 'ProductName': 'Monitor', 'Category': 'Electronics', 'Price': 199.99, 'Quantity': 60, 'InventoryValue': 11999.4}, {'ProductID': 40, 'ProductName': 'Refrigerator', 'Category': 'Electronics', 'Price': 899.99, 'Quantity': 10, 'InventoryValue': 8999.9}] was correct.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import csv\n",
@@ -191,6 +180,13 @@
     "def read_products(fname):\n",
     "    products = []\n",
     "    # TODO: read the `filename' CSV file and create a list structure as in assignment 5-1.\n",
+    "    with open(fname, mode='r', encoding='utf-8') as file:\n",
+    "        reader = csv.DictReader(file)\n",
+    "        for row in reader:\n",
+    "            row['ProductID'] = int(row['ProductID'])\n",
+    "            row['Price'] = float(row['Price'])\n",
+    "            row['Quantity'] = int(row['Quantity'])\n",
+    "            products.append(row)\n",
     "\n",
     "    return products\n",
     "\n",
@@ -200,6 +196,13 @@
     "    products = read_products(fname)\n",
     "    # TODO: Filter the products by the given product group and sorts them based on the total inventory price.\n",
     "    # TODO: The inventory price 'InventoryValue' is calculated for every product using the formula Price*Quantity.\n",
+    "    \n",
+    "    for product in products:\n",
+    "        if product['Category'] == category_filter:\n",
+    "            product['InventoryValue'] = round(product['Price'] * product['Quantity'], 2)\n",
+    "            category_products.append(product)\n",
+    "    \n",
+    "    category_products.sort(key=lambda x: x['InventoryValue'], reverse=True)\n",
     "\n",
     "    return category_products\n",
     "\n",
@@ -209,24 +212,14 @@
     "response_05_02 = filter_products_by_category(filename, 'Electronics')\n",
     "# print(response_05_02)\n",
     "# Test program only compares the first five products in the category.\n",
-    "response_05_02 = response_05_02[:5] or None\n",
+    "response_05_02 = response_05_02[:5] or  None\n",
     "\n",
     "try:\n",
     "    unittest.TestCase().assertListEqual(response_05_02, correct_answer_05_02)\n",
     "    print(f\"Response {response_05_02} was correct.\")\n",
     "except AssertionError as err_msg:\n",
     "    print(err_msg)"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First sequence is not a list: None\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,20 +239,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
    "id": "ffbdfe7a",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-09T17:27:47.998767Z",
+     "start_time": "2025-01-09T17:27:47.982105Z"
+    },
     "execution": {
      "iopub.execute_input": "2024-12-10T09:59:07.630784Z",
      "iopub.status.busy": "2024-12-10T09:59:07.630784Z",
      "iopub.status.idle": "2024-12-10T09:59:07.638834Z",
      "shell.execute_reply": "2024-12-10T09:59:07.638027Z"
     },
-    "lines_to_next_cell": 0,
-    "ExecuteTime": {
-     "end_time": "2025-01-09T17:27:47.998767Z",
-     "start_time": "2025-01-09T17:27:47.982105Z"
-    }
+    "lines_to_next_cell": 0
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Ele[13 chars]1244.2, 'Clothing': 22395.9, 'Sports': 22097.8[100 chars]81.2} != {'Ele[13 chars]1244.1, 'Clothing': 22395.9, 'Sports': 22097.7[100 chars]81.2}\n",
+      "  {'Accessories': 19196.3,\n",
+      "   'Beauty': 10674.2,\n",
+      "   'Clothing': 22395.9,\n",
+      "-  'Electronics': 111244.2,\n",
+      "?                        ^\n",
+      "\n",
+      "+  'Electronics': 111244.1,\n",
+      "?                        ^\n",
+      "\n",
+      "   'Furniture': 20575.0,\n",
+      "-  'Home': 12766.0,\n",
+      "?              ^ ^\n",
+      "\n",
+      "+  'Home': 12765.9,\n",
+      "?              ^ ^\n",
+      "\n",
+      "-  'Sports': 22097.8,\n",
+      "?                  ^\n",
+      "\n",
+      "+  'Sports': 22097.7,\n",
+      "?                  ^\n",
+      "\n",
+      "   'Stationery': 2981.2}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import csv\n",
@@ -269,10 +295,18 @@
     "correct_answer_05_03 = {'Electronics': 111244.1, 'Clothing': 22395.9, 'Sports': 22097.7, 'Furniture': 20575.0,\n",
     "                        'Accessories': 19196.3, 'Home': 12765.9, 'Beauty': 10674.2, 'Stationery': 2981.2}\n",
     "\n",
+    "from decimal import Decimal, ROUND_HALF_UP\n",
     "\n",
     "def read_products(fname):\n",
     "    products = []\n",
-    "\n",
+    "    with open(fname, mode='r', encoding='utf-8') as file:\n",
+    "        reader = csv.DictReader(file)\n",
+    "        for row in reader:\n",
+    "            row['ProductID'] = int(row['ProductID'])\n",
+    "            row['Price'] = Decimal(row['Price'])\n",
+    "            row['Quantity'] = int(row['Quantity'])\n",
+    "            row['InventoryValue'] = (row['Price'] * row['Quantity']).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
+    "            products.append(row)\n",
     "    return products\n",
     "\n",
     "\n",
@@ -282,7 +316,14 @@
     "    # TODO: calculate the total inventory prices of the products in all product categories. Category is the key to the dictionary.\n",
     "    # TODO: Sort the dictionary by total inventory price in descending order.\n",
     "\n",
-    "    return categories\n",
+    "    for product in products:\n",
+    "        category = product['Category']\n",
+    "        inventory_value = product['InventoryValue']\n",
+    "        categories[category] = categories.get(category, Decimal(0)) + inventory_value\n",
+    "    \n",
+    "    sorted_categories = {k: float(v.quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)) for k, v in sorted(categories.items(), key=lambda item: item[1], reverse=True)}\n",
+    "    \n",
+    "    return sorted_categories\n",
     "\n",
     "\n",
     "# Test\n",
@@ -294,26 +335,7 @@
     "    print(f\"Response {response_05_03} was correct.\")\n",
     "except AssertionError as err_msg:\n",
     "    print(err_msg)"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{} != {'Electronics': 111244.1, 'Clothing': 2239[122 chars]81.2}\n",
-      "- {}\n",
-      "+ {'Accessories': 19196.3,\n",
-      "+  'Beauty': 10674.2,\n",
-      "+  'Clothing': 22395.9,\n",
-      "+  'Electronics': 111244.1,\n",
-      "+  'Furniture': 20575.0,\n",
-      "+  'Home': 12765.9,\n",
-      "+  'Sports': 22097.7,\n",
-      "+  'Stationery': 2981.2}\n"
-     ]
-    }
-   ],
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "markdown",
@@ -336,55 +358,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
    "id": "594f3bca",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-09T17:27:48.060600Z",
+     "start_time": "2025-01-09T17:27:48.047886Z"
+    },
     "execution": {
      "iopub.execute_input": "2024-12-10T09:59:07.642830Z",
      "iopub.status.busy": "2024-12-10T09:59:07.642830Z",
      "iopub.status.idle": "2024-12-10T09:59:07.649636Z",
      "shell.execute_reply": "2024-12-10T09:59:07.648773Z"
     },
-    "lines_to_next_cell": 2,
-    "ExecuteTime": {
-     "end_time": "2025-01-09T17:27:48.060600Z",
-     "start_time": "2025-01-09T17:27:48.047886Z"
-    }
+    "lines_to_next_cell": 2
    },
-   "source": [
-    "import random\n",
-    "import timeit\n",
-    "import unittest\n",
-    "\n",
-    "def bubble_sort(a):  # buble sort implementation\n",
-    "    # TODO: sort list a and return sorted list with this own implementation of bubble sort.\n",
-    "    sorted = a.copy()\n",
-    "    n = len(sorted)\n",
-    "    iterated_rounds = 0\n",
-    "\n",
-    "    return sorted\n",
-    "\n",
-    "\n",
-    "# Test\n",
-    "resp_05_04_time_sorted = 1.1  # Time the execution of sorted() function\n",
-    "resp_05_04_time_bubble_sort = 3.4  # Time the execution of bubble_sort() function\n",
-    "\n",
-    "# TODO: Generate a list of 10,000 random numbers.\n",
-    "# TODO: Time the execution of Python's standard sorted() function.\n",
-    "# TODO: Time the execution of bubble_sort() function.\n",
-    "\n",
-    "print(f\"sorted(): {resp_05_04_time_sorted:.6f} seconds.\")\n",
-    "print(f\"bubble_sort(): {resp_05_04_time_bubble_sort:.6f} seconds.\")\n",
-    "print((resp_05_04_time_sorted / resp_05_04_time_bubble_sort))\n",
-    "print(f\"sorted() vs. bubble_sort(): {(resp_05_04_time_sorted / resp_05_04_time_bubble_sort) * 100:.4f} %.\")\n",
-    "\n",
-    "try:\n",
-    "    unittest.TestCase().assertLess(resp_05_04_time_sorted / resp_05_04_time_bubble_sort, 0.1, \"Time difference should be less than 0.1.\")\n",
-    "    unittest.TestCase().assertGreater(resp_05_04_time_sorted / resp_05_04_time_bubble_sort, 0.00001, \"Time difference should be more than 0.00001.\")\n",
-    "    print(f\"bubble sort was {int(resp_05_04_time_bubble_sort / resp_05_04_time_sorted)} times slower than sorted().\")\n",
-    "    print(f\"Response was accepted.\")\n",
-    "except AssertionError as err_msg:\n",
-    "    print(err_msg)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -398,7 +386,56 @@
      ]
     }
    ],
-   "execution_count": 4
+   "source": [
+    "import random\n",
+    "import timeit\n",
+    "import unittest\n",
+    "\n",
+    "def bubble_sort(a):  # buble sort implementation\n",
+    "    # TODO: sort list a and return sorted list with this own implementation of bubble sort.\n",
+    "    #sorted = a.copy()\n",
+    "    #n = len(sorted)\n",
+    "    iterated_rounds = 0\n",
+    "\n",
+    "    sorted_list = a.copy()\n",
+    "    n = len(sorted_list)\n",
+    "    for i in range(n):\n",
+    "        swapped = False\n",
+    "        for j in range(0, n-i-1):\n",
+    "            if sorted_list[j] > sorted_list[j+1]:\n",
+    "                sorted_list[j], sorted_list[j+1] = sorted_list[j+1], sorted_list[j]\n",
+    "                swapped = True\n",
+    "        iterated_rounds += 1\n",
+    "        if not swapped:\n",
+    "            break\n",
+    "    return sorted_list\n",
+    "\n",
+    "\n",
+    "# Test\n",
+    "resp_05_04_time_sorted = 1.1  # Time the execution of sorted() function\n",
+    "resp_05_04_time_bubble_sort = 3.4  # Time the execution of bubble_sort() function\n",
+    "\n",
+    "# TODO: Generate a list of 10,000 random numbers.\n",
+    "random_numbers = [random.randint(1, 100000) for _ in range(10000)]\n",
+    "# TODO: Time the execution of Python's standard sorted() function.\n",
+    "time_sorted = timeit.timeit(lambda: sorted(random_numbers), number=1)\n",
+    "# TODO: Time the execution of bubble_sort() function.\n",
+    "time_bubble_sort = timeit.timeit(lambda: bubble_sort(random_numbers), number=1)\n",
+    "\n",
+    "\n",
+    "print(f\"sorted(): {resp_05_04_time_sorted:.6f} seconds.\")\n",
+    "print(f\"bubble_sort(): {resp_05_04_time_bubble_sort:.6f} seconds.\")\n",
+    "print((resp_05_04_time_sorted / resp_05_04_time_bubble_sort))\n",
+    "print(f\"sorted() vs. bubble_sort(): {(resp_05_04_time_sorted / resp_05_04_time_bubble_sort) * 100:.4f} %.\")\n",
+    "\n",
+    "try:\n",
+    "    unittest.TestCase().assertLess(resp_05_04_time_sorted / resp_05_04_time_bubble_sort, 0.1, \"Time difference should be less than 0.1.\")\n",
+    "    unittest.TestCase().assertGreater(resp_05_04_time_sorted / resp_05_04_time_bubble_sort, 0.00001, \"Time difference should be more than 0.00001.\")\n",
+    "    print(f\"bubble sort was {int(resp_05_04_time_bubble_sort / resp_05_04_time_sorted)} times slower than sorted().\")\n",
+    "    print(f\"Response was accepted.\")\n",
+    "except AssertionError as err_msg:\n",
+    "    print(err_msg)"
+   ]
   }
  ],
  "metadata": {
@@ -406,6 +443,11 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "kernelspec": {
+   "display_name": "tf_env",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -417,12 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "language": "python",
-   "display_name": "Python 3 (ipykernel)"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
